# PhiloLogic4

./: CHANGELOG.md  Dockerfile  INSTALLING.rst  README.md  README.rst  install.sh  requirement.rst  requirements.rst  requirements.txt
python/: PlainTextParser.py  README  pyproject.toml  setup.py
python/examples/: bleue_webloarder.py~  elements.py  encyc_webloader.py~  loader.py  perseus_webloader.py  shlaxtractor2.py  shlaxtractor2.py~  trevoux_loader.py  trevoux_loader.py~  webloader.py~
python/examples/alpha_services/: cite_list_service.py  conc_service.py  freq_json_service.py  object_service.py  philo_helpers.py
python/examples/old_examples/: cgi4.py  dirtyload.py
python/examples/services/: form_service.py
python/philologic/: #Loader.py#  #newLoader.py#  AbstractParser.py  AbstractParser2.py  AbstractParser3.py  AbstractParser3.py~  AbstractParser4.py~  AbstractParser5.py~  BufferedParser.py  Config.py  DB.py  DB.py~  DirtyParser.py~  Formatter.py~  HitList.py  HitList.py~  HitWrapper.py  HitWrapper.py~  LoadFilters.py  LoadFilters.py~  LoadOptions.py  Loader.py  Loader.py~  MakeTables.py  MetadataQuery.py  NewParser.py  OHCOVector.py  Parser.py  Parser.py.backup  Parser.py~  ParserHelpers.py  PhiloDB.py~  PlainTextParser.py  PostFilters.py  Query.py  Query.py~  QuerySyntax.py  SqlToms.py~  StrictParser.py  TagCensus.py  (+14 more)
python/philologic/app/: FragmentParser.py  ObjectFormatter.py  __init__.py  citations.py  collocation_scores.py  find_similar_words.py  get_text.py  landing_page.py  link.py  reports.py  web_config.py  wsgi_handler.py
python/philologic/loadtime/: LoadFilters.py  LoadOptions.py  Loader.py  OHCOVector.py  Parser.py  PhiloLoad.py  PlainTextParser.py  PostFilters.py  WordsStorage.py  __init__.py
python/philologic/runtime/: DB.py  FragmentParser.py  HitList.py  HitWrapper.py  MetadataQuery.py  ObjectFormatter.py  Query.py  QuerySyntax.py  ReadWordIndex.py  WSGIHandler.py  (+12 more)
python/philologic5/: Config.py  shlax.py
python/scripts/: philoload4  philoload5  philosearch
(+615 files in other folders)
